Finish login page

--- a/src/css/partials/colors.scss
+++ b/src/css/partials/colors.scss
@@ -1,1 +1,4 @@
-$primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+$primary-background: #f2f2f2;
+$header-color: #4a4a4a;
+$header-text: #cad2db;
+$button-color:#3d88db
