--- a/src/css/partials/login.scss
+++ b/src/css/partials/login.scss
@@ -1,3 +1,22 @@
+.login-header {
+  height: 7vw;
+  background-color: $header-color;
+  color: $header-text;
+  font-size: 30px;
+}
+
+.login {
+  height: 4vw;
+  background-color: $header-color;
+  color: $header-text;
+  font-size: 30px;
+}
+
+.title {
+  padding-top: 2vw;
+  padding-left: 1vw;
+}
+
 .user-name, .password, .title-container{
   display: block;
   margin-bottom: 2vw;
@@ -16,11 +35,21 @@
 
 .login-wrapper {
   margin-top: 8vw;
+  height: 30vw;
+  width: 30vw;
+  border: $header-color solid
 }
 
-.login-header {
-  font-size: 30px
+.login-button {
+  margin-top: 3vw;
+  background-color: $button-color;
+  border-radius: 4px;
 }
+
+ .login-input-wrapper {
+   margin-left: 7vw;
+   margin-top: 5vw;
+ }
 
 .title {
   font-size: 2.5vw;
