Assigned variables for all colors

--- a/src/css/partials/colors.scss
+++ b/src/css/partials/colors.scss
@@ -1,4 +1,6 @@
 $primary-background: #f2f2f2;
 $header-color: #4a4a4a;
 $header-text: #cad2db;
-$button-color:#3d88db
+$button-color:#3d88db;
+$trip-header-background: #2e6199;
+$destination-background: white;
