--- a/src/css/partials/trip-request.scss
+++ b/src/css/partials/trip-request.scss
@@ -28,7 +28,7 @@
   padding: 10px;
   margin: 10px;
   border-radius: 2px;
-  background-color: white;
+  background-color: $destination-background;
   box-shadow: 2px 2px 5px grey;
 }
 
