Login feedback displayed in box and red

--- a/src/css/partials/colors.scss
+++ b/src/css/partials/colors.scss
@@ -4,3 +4,4 @@ $header-text: #cad2db;
 $button-color:#3d88db;
 $trip-header-background: #2e6199;
 $destination-background: white;
+$error-color: red;
